# dns-in-a-weekend

./: Cargo.toml  README.md
src/: dns.rs  lib.rs  main.rs  resolver.rs  tests.rs
