[package]
name = "rdns"
version = "0.1.0"
edition = "2021"


[profile.release]
lto = "fat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.17"
# to generate ids for dns headers.
rand = { version = "0.8.5" }
# for serde needs.
structure = "0.1.2"
# nicer error handling.
thiserror = "1.0.40"

[dev-dependencies]
test-case = "3.1.0"
