[package]
name = "dns_in_a_weekend"
version = "0.1.1"
edition = "2021"
readme = "./README.md"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
license-file = "./LICENSE"
description = "A toy implementation of a DNS server that implements caching."
homepage = "https://github.com/aalekhpatel07/rdns"
repository = "https://github.com/aalekhpatel07/rdns"

[profile.release]
lto = "fat"

[[bin]]
path = "src/main.rs"
name = "dns-in-a-weekend"

[dependencies]
# for cli arg parsing in the main server binary.
clap = { version = "4.2.7", features = ["derive", "env"] }
# for capturing logs in the main server binary.
env_logger = "0.10.0"
# for emitting logs.
log = "0.4.17"
# to generate ids for dns headers.
rand = { version = "0.8.5" }
# for serde needs.
structure = "0.1.2"
# nicer error handling.
thiserror = "1.0.40"

[dev-dependencies]
test-case = "3.1.0"
